Fix dark mode image and clean files

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,4 +62,12 @@
       radial-gradient(at 0% 50%, rgba(217, 101, 112, 0.1) 0px, transparent 50%);
     min-height: 100vh;
   }
+
+  .dark body {
+    @apply bg-background;
+    background-image:
+      radial-gradient(at 40% 20%, rgba(66, 133, 244, 0.2) 0px, transparent 50%),
+      radial-gradient(at 80% 0%, rgba(155, 114, 203, 0.2) 0px, transparent 50%),
+      radial-gradient(at 0% 50%, rgba(217, 101, 112, 0.2) 0px, transparent 50%);
+  }
 }
